# oscleaner

./: .gitignore  Cargo.toml  README.md  oscleaner.nuspec
.github/workflows/: ci.yml  release-macos.yml  release-windows.yml
docs/: development.md
src/: app.rs  categories.rs  cleanup.rs  cli.rs  context.rs  detectors.rs  disks.rs  fs_utils.rs  main.rs  safe.rs  scanner.rs  types.rs
src/cli/: args.rs  mod.rs  ui.rs
src/detectors/: browsers.rs  devtools.rs  linux.rs  macos.rs  mod.rs  windows.rs
