[package]
name = "oscleaner"
version = "1.2.1"
edition = "2024"
authors = ["Hebert Cisco <hebertcisco@outlook.com>"]
description = "Cross-platform system cleanup CLI to free up disk space"
repository = "https://github.com/hebertcisco/oscleaner"
homepage = "https://github.com/hebertcisco/oscleaner"
license = "MIT"
readme = "README.md"
keywords = ["cleanup", "disk-space", "system", "cli", "cache"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
